# yinhe

./: .gitignore  Cargo.toml  test_cstr
.mimocode/: .cron-lock
.opencode/plans/: track_panel_restructure.md
assets/: yinhe.icns
crates/yinhe-archive/: Cargo.toml
crates/yinhe-archive/src/: lib.rs
crates/yinhe-arrangement/: Cargo.toml
crates/yinhe-arrangement/src/: instances.rs  lib.rs  view.rs
crates/yinhe-audio/: Cargo.toml
crates/yinhe-audio/src/: audio_model.rs  audio_renderer.rs  audio_ring.rs  channel.rs  channel_layout.rs  engine.rs  engine_render.rs  engine_state.rs  engine_tests.rs  export.rs  gpu_export.rs  gpu_renderer.rs  lib.rs  prepare_model.rs  scheduler.rs  sfz_parser.rs  soundfont.rs  spawn.rs
crates/yinhe-audio/src/shaders/: test_switch.wgsl  voice_render.wgsl
crates/yinhe-audio/src/sink/: cpal.rs  mod.rs  wav.rs
crates/yinhe-automation/: Cargo.toml
crates/yinhe-core/: Cargo.toml
crates/yinhe-editor-core/: Cargo.toml
crates/yinhe-editor-core/src/: audio_settings.rs  batch_ops.rs  config.rs  document.rs  edit_state.rs  follow.rs  history.rs  lib.rs  midi_compat.rs  playback.rs  progress.rs  project_data.rs  quantize.rs
crates/yinhe-editor-core/src/document/: arrange_move.rs  automation_edit.rs  note_edit.rs  selection.rs  track_ops.rs
crates/yinhe-editor-core/src/history/: apply.rs  commit.rs  tests.rs
crates/yinhe-egui/: Cargo.toml  build.rs  icon.rc
crates/yinhe-egui/locales/: en.yml  ja.yml  ko.yml  zh-CN.yml
crates/yinhe-egui/src/: app.rs  app_actions.rs  app_audio.rs  app_eframe.rs  arrange.rs  arrangement_view_ui.rs  audio_controller.rs  audio_settings.rs  automation_panel.rs  chrome.rs  config.rs  dialogs.rs  document.rs  edit_state.rs  file_loader.rs  history.rs  loading.rs  main.rs  mode_bar.rs  perf_probe.rs  piano_view.rs  playback.rs  progress.rs  project_data.rs  project_io.rs  quantize.rs  render_context.rs  right_panel.rs  scrollbar.rs  selection.rs  settings.rs  split_handle.rs  system_monitor.rs  theme.rs  time_format.rs  time_ruler.rs  title_bar.rs  track_panel.rs  transport_bar.rs  util.rs  (+2 more)
crates/yinhe-egui/src/app/: actions.rs  audio.rs  audio_state.rs  dialog_dispatch.rs  export_state.rs  layout.rs  main_loop.rs  poll.rs  rescale_state.rs  ui_helpers.rs
crates/yinhe-egui/src/app/ui_helpers/: dialogs.rs  layout.rs  poll.rs
crates/yinhe-egui/src/arrange/: track_panel.rs  view_ui.rs
crates/yinhe-egui/src/chrome/: dialog.rs  mode_bar.rs  title_bar.rs  transport_bar.rs
crates/yinhe-egui/src/dialogs/: archive_picker.rs  audio_device_switch.rs  export.rs  file_loader.rs  gpu_device_lost.rs  load_error.rs  loading_overlay.rs  memory_breakdown.rs  ppq_rescale_confirm.rs  rescale_overlay.rs  settings.rs  system_monitor.rs  unsaved.rs
crates/yinhe-egui/src/piano_view/: automation_panel.rs  drag.rs  pencil.rs
crates/yinhe-egui/src/piano_view/automation_panel/: interaction.rs
crates/yinhe-egui/src/platform/: macos.rs  mod.rs  stub.rs
crates/yinhe-egui/src/rack/: mod.rs  sf_list.rs
crates/yinhe-egui/src/right_panel/: channels_panel.rs  config.rs  event_browser.rs  info_panel.rs  project_info.rs  sf_list.rs  soundbank.rs  soundfont.rs
crates/yinhe-egui/src/right_panel/info_panel/: anchor.rs  track.rs
crates/yinhe-egui/src/selection/: drag.rs  draw.rs
crates/yinhe-egui/src/theme/: colors.rs  layout.rs
crates/yinhe-egui/src/util/: time_format.rs
crates/yinhe-egui/src/widgets/: grid_lines.rs  hover.rs  mode_bar.rs  qos.rs  quantize_popup.rs  scrollbar.rs  selection_actions.rs  split_handle.rs  theme.rs  time_format.rs  time_ruler.rs  title_bar.rs  tools_panel.rs  track_panel.rs  transport_bar.rs
crates/yinhe-memtrace/: Cargo.toml
crates/yinhe-memtrace/src/: lib.rs  perf_probe.rs
crates/yinhe-mid2/: Cargo.toml
crates/yinhe-mid2/examples/: mem_probe.rs
crates/yinhe-mid2/src/: encoding.rs  error.rs  lib.rs  parser.rs  writer.rs
crates/yinhe-mid2/tests/: roundtrip.rs  vs_old.rs
crates/yinhe-model/: Cargo.toml
crates/yinhe-model/src/: events.rs  lib.rs  model.rs  source.rs
crates/yinhe-model/src/convert/: from_archive.rs  from_midi.rs  mod.rs  to_archive.rs  to_midi.rs
crates/yinhe-model/src/io/: load.rs  save.rs
crates/yinhe-pianoroll/: Cargo.toml
crates/yinhe-pianoroll/src/: arrangement_instances.rs  arrangement_view.rs  automation_instances.rs  automation_prepare.rs  grid.rs  instances.rs  keyboard.rs  lib.rs  pianoroll_prepare.rs  renderer.rs  shader.wgsl  vertex.rs  view.rs
crates/yinhe-project/: Cargo.toml
crates/yinhe-project/src/: archive.rs  conversion.rs  events.rs  header.rs  lib.rs  paths.rs  schema.rs  varint.rs
crates/yinhe-project/src/conversion/: export_midi.rs  to_archive.rs  to_midi.rs
crates/yinhe-synth/: Cargo.toml
crates/yinhe-synth/src/: gpu_synth.rs  lib.rs  sfz_parser.rs  synth.rs
crates/yinhe-synth/src/shaders/: const_one.wgsl  test_read.wgsl  test_shader.wgsl  voice_render.wgsl
crates/yinhe-tests/: Cargo.toml
crates/yinhe-tests/src/: lib.rs
crates/yinhe-tests/tests/: document_edit.rs  instance_building.rs  midi_roundtrip.rs  project_roundtrip.rs  view_math.rs
crates/yinhe-wgpu/: Cargo.toml
crates/yinhe-wgpu/src/: arrangement.rs  automation.rs  cull.rs  cull.wgsl  grid.rs  layer.rs  lib.rs  note_buffer_key.rs  pianoroll.rs  pipeline.rs  render_thread.rs  renderer.rs  shader.wgsl  util.rs  vertex.rs
crates/yinhe-wgpu/src/arrangement/: instances.rs
crates/yinhe-wgpu/src/automation/: data_lines.rs  decor.rs  ghost.rs  prepare.rs  tempo.rs  velocity_bars.rs
crates/yinhe-wgpu/src/pianoroll/: instances.rs  prepare.rs
crates/yinhe-yin/: Cargo.toml
crates/yinhe-yin/src/: container.rs  error.rs  io.rs  lib.rs  mapping.rs  project_meta.rs
crates/yinhe-yin/tests/: roundtrip.rs
docs/: optimization-260616.md  optimization-260703.md  optimization-260721.md  panic-260710.txt  perf-investigation-plan.md  plan-egui.md  plan-event-browser-merge.md  shit-mountain-analyzer.md  spec-performance-overhaul.md  spec-xsynth-integration.md  spec-yinhe-synth.md  yinhe-architecture-v2.md  yinhe_review_public.md  至v1.0.0前的更新计划.md
(+52 files in other folders)
