[workspace]
default-members = ["crates/yinhe-egui"]
members = [
    "crates/yinhe-types",
    "crates/yinhe-core",
    "crates/yinhe-mid2",
    "crates/yinhe-yin",
    "crates/yinhe-dms",
    "crates/yinhe-archive",
    "crates/yinhe-wgpu",
    "crates/yinhe-pianoroll",
    "crates/yinhe-automation",
    "crates/yinhe-arrangement",
    "crates/yinhe-audio",
    "crates/yinhe-editor-core",
    "crates/yinhe-egui",
    "crates/yinhe-memtrace",
    "crates/yinhe-tests",
    "crates/yinhe-test-helpers",
]
resolver = "2"

[workspace.dependencies]
wgpu = "29.0.3"
eframe = { version = "0.34.2", features = ["wgpu"] }
egui = "0.34.2"
egui_extras = "0.34"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
midly = "0.5.3"
thiserror = "2.0.18"
half = "2"
rayon = "1"
rfd = "0.17.2"
tracing = "0.1"
tracing-subscriber = "0.3"
sysinfo = "0.39"
egui_material_icons = "0.6"
image = "0.25"
tempfile = "3"
