[workspace]
default-members = ["crates/yinhe-egui"]
members = [
    "crates/yinhe-types",
    "crates/yinhe-core",
    "crates/yinhe-mid2",
    "crates/yinhe-yin",
    "crates/yinhe-dms",
    "crates/yinhe-archive",
    "crates/yinhe-wgpu",
    "crates/yinhe-audio",
    "crates/yinhe-synth",
    "crates/yinhe-editor-core",
    "crates/yinhe-egui",
    "crates/yinhe-memtrace",
    "crates/yinhe-haptic",
    "crates/yinhe-tests",
    "crates/yinhe-test-helpers",
    "crates/yinhe-theme",
]
resolver = "2"

[workspace.dependencies]
wgpu = "29.0.3"
eframe = { version = "0.35", features = ["wgpu"] }
egui = "0.35"
egui_extras = "0.35"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
midly = "0.5.3"
thiserror = "2.0.18"
half = "2"
rayon = "1"
rfd = "0.17.2"
tracing = "0.1"
tracing-subscriber = "0.3"
sysinfo = "0.39"
egui_material_icons = "0.7"
image = "0.25"
tempfile = "3"

# 跨 crate 共享依赖
serde = { version = "1", features = ["derive", "rc"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
cpal = "0.18"
dirs = "6"

[profile.fast-release]
inherits = "release"                # 基于 release 默认设置
opt-level = 1                       # 基本优化，编译速度远快于 3
lto = false                         # 禁用链接时优化（大幅减少链接时间）
codegen-units = 16                  # 增加并行代码生成单元（最大 16，加速编译）
debug = 1                           # 行号表（函数名+行号），支持 backtrace 和 profiler
strip = "none"                      # 保留符号用于调试分析（体积换调试能力）
panic = "abort"                    # 使用 abort 而非 unwind（减少生成的代码量）
incremental = true                 # 启用增量编译（对多次构建友好）

[profile.release]
opt-level = 3            # 性能优先：最大运行速度优化
lto = "thin"             # 轻量 LTO：兼顾性能与编译速度（比 "z" 快得多，体积略增）
codegen-units = 16       # 并行代码生成：加速链接，对运行时性能影响极小
strip = true             # 体积第二：strip 仅去调试符号，不影响运行性能
panic = "abort"          # 不用 unwind，减少体积且略快
