[package]
name = "yinhe-arrangement"
version = "0.1.0"
edition = "2024"

[dependencies]
yinhe-types = { path = "../yinhe-types" }
yinhe-wgpu = { path = "../yinhe-wgpu" }
yinhe-theme = { path = "../yinhe-theme" }
rayon = { workspace = true }
stacker = "0.1"

[dev-dependencies]
yinhe-test-helpers = { path = "../yinhe-test-helpers" }
