[package]
name = "yinhe-audio"
version = "0.1.0"
edition = "2024"

[features]
default = []
gpu = ["yinhe-synth"]

[dependencies]
xsynth-core = "0.4"
xsynth-soundfonts = "0.4"

cpal = { workspace = true }
hound = "3.5"
crossbeam-channel = "0.5"
yinhe-synth = { path = "../yinhe-synth", optional = true }

yinhe-types = { path = "../yinhe-types" }
yinhe-core = { path = "../yinhe-core" }
yinhe-memtrace = { path = "../yinhe-memtrace" }

[dev-dependencies]
pollster = { workspace = true }
tempfile = { workspace = true }
yinhe-mid2 = { path = "../yinhe-mid2" }
