[package]
name = "yinhe-editor-core"
version = "0.1.0"
edition = "2024"

[dependencies]
yinhe-types = { path = "../yinhe-types" }
yinhe-core = { path = "../yinhe-core" }
yinhe-mid2 = { path = "../yinhe-mid2" }
yinhe-yin = { path = "../yinhe-yin" }
yinhe-automation = { path = "../yinhe-automation" }
yinhe-memtrace = { path = "../yinhe-memtrace" }
dirs = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
zstd = "0.13"
bincode = "1"
