[package]
name = "yinhe-egui"
version = "0.1.0"
edition = "2024"

[dependencies]
yinhe-theme = { path = "../yinhe-theme", features = ["egui"] }
yinhe-types = { path = "../yinhe-types" }
yinhe-core = { path = "../yinhe-core" }
yinhe-mid2 = { path = "../yinhe-mid2" }
yinhe-yin = { path = "../yinhe-yin" }
yinhe-dms = { path = "../yinhe-dms" }
yinhe-archive = { path = "../yinhe-archive" }
yinhe-pianoroll = { path = "../yinhe-pianoroll" }
yinhe-automation = { path = "../yinhe-automation" }
yinhe-arrangement = { path = "../yinhe-arrangement" }
yinhe-wgpu = { path = "../yinhe-wgpu" }
yinhe-audio = { path = "../yinhe-audio" }
yinhe-memtrace = { path = "../yinhe-memtrace" }
yinhe-haptic = { path = "../yinhe-haptic" }
yinhe-editor-core = { path = "../yinhe-editor-core" }
cpal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
wgpu = { workspace = true }
rfd = { workspace = true }
pollster = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
sysinfo = { workspace = true }
egui_material_icons = { workspace = true }
image = { workspace = true }
bytemuck = { workspace = true }

[build-dependencies]
embed-resource = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", features = ["unstable-static-class"] }
objc2-metal = "0.3.2"
raw-window-handle = "0.6"

[package.metadata.bundle]
name = "Yinhe"
license = "LPGL-3.0"
identifier = "com.jieneng.yinhe"
icon = ["assets/yinhe.icns"]
version = "0.1.0"
resources = []
copyright = "Copyright (c) Jieneng 2026"
category = "Developer Tool"
short_description = "A MIDI editor built with Rust and egui."
long_description = "A MIDI editor built with Rust and egui."
