[package]
name = "yinhe-egui"
version = "0.1.0"
edition = "2024"

[features]
default = ["gpu"]
gpu = ["yinhe-audio/gpu"]
# 启用 yinhe-memtrace 的分类内存追踪（有性能开销，默认关闭）。
# `cargo build --features memtrace` 开启。
memtrace = ["yinhe-memtrace/memtrace"]

[dependencies]
yinhe-theme = { path = "../yinhe-theme", features = ["egui"] }
yinhe-types = { path = "../yinhe-types" }
yinhe-core = { path = "../yinhe-core" }
yinhe-mid2 = { path = "../yinhe-mid2" }
yinhe-yin = { path = "../yinhe-yin" }
yinhe-dms = { path = "../yinhe-dms" }
yinhe-archive = { path = "../yinhe-archive" }
yinhe-wgpu = { path = "../yinhe-wgpu" }
yinhe-audio = { path = "../yinhe-audio", features = ["gpu"] }
yinhe-memtrace = { path = "../yinhe-memtrace" }
yinhe-haptic = { path = "../yinhe-haptic" }
yinhe-editor-core = { path = "../yinhe-editor-core" }
cpal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
wgpu = { workspace = true }
rfd = { workspace = true }
#pollster = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
sysinfo = { workspace = true }
egui_material_icons = { workspace = true }
image = { workspace = true }
bytemuck = { workspace = true }
rust-i18n = { workspace = true }

[build-dependencies]
embed-resource = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-metal = "0.3.2"
raw-window-handle = "0.6"
muda = "0.19"

[package.metadata.bundle]
name = "Yinhe"
license = "LPGL-3.0"
identifier = "com.jieneng.yinhe"
icon = ["assets/yinhe.icns"]
version = "0.1.0"
resources = []
copyright = "Copyright (c) Jieneng 2026"
category = "Developer Tool"
short_description = "A MIDI editor built with Rust and egui."
long_description = "A MIDI editor built with Rust and egui."
