[package]
name = "yinhe-memtrace"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }

[target.'cfg(not(target_os = "macos"))'.dependencies]
mimalloc = { version = "0.1", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
tikv-jemallocator = "0.6"
tikv-jemalloc-ctl = "0.6"
