[package]
name = "yinhe-model"
version = "0.1.0"
edition = "2024"

[dependencies]
yinhe-types = { path = "../yinhe-types" }
yinhe-midi = { path = "../yinhe-midi" }
yinhe-project = { path = "../yinhe-project" }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
zstd = { version = "0.13", default-features = false }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
