[package]
name = "yinhe-pianoroll"
version = "0.1.0"
edition = "2024"

[dependencies]
yinhe-core = { path = "../yinhe-core" }
yinhe-theme = { path = "../yinhe-theme" }
yinhe-types = { path = "../yinhe-types" }
yinhe-wgpu = { path = "../yinhe-wgpu" }
rayon = { workspace = true }

[dev-dependencies]
yinhe-test-helpers = { path = "../yinhe-test-helpers" }
