[package]
name = "yinhe-project"
version = "0.1.0"
edition = "2024"

[dependencies]
yinhe-midi = { path = "../yinhe-midi" }
yinhe-types = { path = "../yinhe-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
zstd = { version = "0.13", default-features = false }
uuid = { version = "1", features = ["v4"] }
midly = { workspace = true }
