[package]
name = "yinhe-tests"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
yinhe-types = { path = "../yinhe-types" }
yinhe-core = { path = "../yinhe-core" }
yinhe-mid2 = { path = "../yinhe-mid2" }
yinhe-editor-core = { path = "../yinhe-editor-core" }
yinhe-wgpu = { path = "../yinhe-wgpu" }
yinhe-test-helpers = { path = "../yinhe-test-helpers" }
yinhe-theme = { path = "../yinhe-theme" }
tempfile = { workspace = true }
