[package]
name = "yinhe-yin"
version = "0.1.0"
edition = "2024"

[dependencies]
yinhe-core = { path = "../yinhe-core" }
yinhe-types = { path = "../yinhe-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
zstd = { version = "0.13", default-features = false }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
